lightprotobufgen/lightprotobufgen/protobufParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .protobufListener import protobufListener
else:
    from protobufListener import protobufListener


class protobufParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'import'", u"'package'", u"'option'", 
                     u"'='", u"'message'", u"'extend'", u"'enum'", u"'{'", 
                     u"'}'", u"'service'", u"'rpc'", u"'('", u"')'", u"'returns'", 
                     u"':'", u"'group'", u"'['", u"','", u"']'", u"'extensions'", 
                     u"'to'", u"'max'", u"'required'", u"'optional'", u"'repeated'", 
                     u"'double'", u"'float'", u"'int32'", u"'int64'", u"'uint32'", 
                     u"'uint64'", u"'sint32'", u"'sint64'", u"'fixed32'", 
                     u"'fixed64'", u"'sfixed32'", u"'sfixed64'", u"'bool'", 
                     u"'string'", u"'bytes'", u"'.'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"IDENT", 
                      u"CAMEL_IDENT", u"INT_LIT", u"DEC_INT", u"HEX_INT", 
                      u"OCT_INT", u"FLOAT_LIT", u"BOOL_LIT", u"STR_LIT", 
                      u"QUOTE", u"HEX_ESCAPE", u"OCT_ESCAPE", u"CHAR_ESCAPE", 
                      u"WS" ]

    RULE_proto_rule = 0
    RULE_import_rule = 1
    RULE_package_rule = 2
    RULE_option_rule = 3
    RULE_optionBody_rule = 4
    RULE_message_rule = 5
    RULE_extend_rule = 6
    RULE_enum_rule = 7
    RULE_enumField_rule = 8
    RULE_service_rule = 9
    RULE_rpc_rule = 10
    RULE_messageBody_rule = 11
    RULE_group_rule = 12
    RULE_field_rule = 13
    RULE_extensions_rule = 14
    RULE_modifier_rule = 15
    RULE_type_rule = 16
    RULE_dotIdent_rule = 17
    RULE_constant_rule = 18

    ruleNames =  [ "proto_rule", "import_rule", "package_rule", "option_rule", 
                   "optionBody_rule", "message_rule", "extend_rule", "enum_rule", 
                   "enumField_rule", "service_rule", "rpc_rule", "messageBody_rule", 
                   "group_rule", "field_rule", "extensions_rule", "modifier_rule", 
                   "type_rule", "dotIdent_rule", "constant_rule" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    IDENT=43
    CAMEL_IDENT=44
    INT_LIT=45
    DEC_INT=46
    HEX_INT=47
    OCT_INT=48
    FLOAT_LIT=49
    BOOL_LIT=50
    STR_LIT=51
    QUOTE=52
    HEX_ESCAPE=53
    OCT_ESCAPE=54
    CHAR_ESCAPE=55
    WS=56

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Proto_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(protobufParser.EOF, 0)

        def message_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Message_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Message_ruleContext,i)


        def extend_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Extend_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Extend_ruleContext,i)


        def enum_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Enum_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Enum_ruleContext,i)


        def import_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Import_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Import_ruleContext,i)


        def package_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Package_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Package_ruleContext,i)


        def option_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Option_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Option_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_proto_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterProto_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitProto_rule(self)




    def proto_rule(self):

        localctx = protobufParser.Proto_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_proto_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << protobufParser.T__0) | (1 << protobufParser.T__1) | (1 << protobufParser.T__2) | (1 << protobufParser.T__3) | (1 << protobufParser.T__5) | (1 << protobufParser.T__6) | (1 << protobufParser.T__7))) != 0):
                self.state = 45
                token = self._input.LA(1)
                if token in [protobufParser.T__5]:
                    self.state = 38
                    self.message_rule()

                elif token in [protobufParser.T__6]:
                    self.state = 39
                    self.extend_rule()

                elif token in [protobufParser.T__7]:
                    self.state = 40
                    self.enum_rule()

                elif token in [protobufParser.T__1]:
                    self.state = 41
                    self.import_rule()

                elif token in [protobufParser.T__2]:
                    self.state = 42
                    self.package_rule()

                elif token in [protobufParser.T__3]:
                    self.state = 43
                    self.option_rule()

                elif token in [protobufParser.T__0]:
                    self.state = 44
                    self.match(protobufParser.T__0)

                else:
                    raise NoViableAltException(self)

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(protobufParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Import_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR_LIT(self):
            return self.getToken(protobufParser.STR_LIT, 0)

        def getRuleIndex(self):
            return protobufParser.RULE_import_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterImport_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitImport_rule(self)




    def import_rule(self):

        localctx = protobufParser.Import_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(protobufParser.T__1)
            self.state = 53
            self.match(protobufParser.STR_LIT)
            self.state = 54
            self.match(protobufParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Package_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def getRuleIndex(self):
            return protobufParser.RULE_package_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterPackage_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitPackage_rule(self)




    def package_rule(self):

        localctx = protobufParser.Package_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_package_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(protobufParser.T__2)
            self.state = 57
            self.match(protobufParser.IDENT)
            self.state = 58
            self.match(protobufParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Option_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionBody_rule(self):
            return self.getTypedRuleContext(protobufParser.OptionBody_ruleContext,0)


        def getRuleIndex(self):
            return protobufParser.RULE_option_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterOption_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitOption_rule(self)




    def option_rule(self):

        localctx = protobufParser.Option_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_option_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(protobufParser.T__3)
            self.state = 61
            self.optionBody_rule()
            self.state = 62
            self.match(protobufParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionBody_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dotIdent_rule(self):
            return self.getTypedRuleContext(protobufParser.DotIdent_ruleContext,0)


        def constant_rule(self):
            return self.getTypedRuleContext(protobufParser.Constant_ruleContext,0)


        def getRuleIndex(self):
            return protobufParser.RULE_optionBody_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterOptionBody_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitOptionBody_rule(self)




    def optionBody_rule(self):

        localctx = protobufParser.OptionBody_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optionBody_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.dotIdent_rule()
            self.state = 65
            self.match(protobufParser.T__4)
            self.state = 66
            self.constant_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Message_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def messageBody_rule(self):
            return self.getTypedRuleContext(protobufParser.MessageBody_ruleContext,0)


        def getRuleIndex(self):
            return protobufParser.RULE_message_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterMessage_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitMessage_rule(self)




    def message_rule(self):

        localctx = protobufParser.Message_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_message_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(protobufParser.T__5)
            self.state = 69
            self.match(protobufParser.IDENT)
            self.state = 70
            self.messageBody_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Extend_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dotIdent_rule(self):
            return self.getTypedRuleContext(protobufParser.DotIdent_ruleContext,0)


        def messageBody_rule(self):
            return self.getTypedRuleContext(protobufParser.MessageBody_ruleContext,0)


        def getRuleIndex(self):
            return protobufParser.RULE_extend_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterExtend_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitExtend_rule(self)




    def extend_rule(self):

        localctx = protobufParser.Extend_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_extend_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(protobufParser.T__6)
            self.state = 73
            self.dotIdent_rule()
            self.state = 74
            self.messageBody_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Enum_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def option_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Option_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Option_ruleContext,i)


        def enumField_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.EnumField_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.EnumField_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_enum_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterEnum_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitEnum_rule(self)




    def enum_rule(self):

        localctx = protobufParser.Enum_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enum_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(protobufParser.T__7)
            self.state = 77
            self.match(protobufParser.IDENT)
            self.state = 78
            self.match(protobufParser.T__8)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << protobufParser.T__0) | (1 << protobufParser.T__3) | (1 << protobufParser.IDENT))) != 0):
                self.state = 82
                token = self._input.LA(1)
                if token in [protobufParser.T__3]:
                    self.state = 79
                    self.option_rule()

                elif token in [protobufParser.IDENT]:
                    self.state = 80
                    self.enumField_rule()

                elif token in [protobufParser.T__0]:
                    self.state = 81
                    self.match(protobufParser.T__0)

                else:
                    raise NoViableAltException(self)

                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(protobufParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumField_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def INT_LIT(self):
            return self.getToken(protobufParser.INT_LIT, 0)

        def getRuleIndex(self):
            return protobufParser.RULE_enumField_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterEnumField_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitEnumField_rule(self)




    def enumField_rule(self):

        localctx = protobufParser.EnumField_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enumField_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(protobufParser.IDENT)
            self.state = 90
            self.match(protobufParser.T__4)
            self.state = 91
            self.match(protobufParser.INT_LIT)
            self.state = 92
            self.match(protobufParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Service_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def option_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Option_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Option_ruleContext,i)


        def rpc_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Rpc_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Rpc_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_service_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterService_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitService_rule(self)




    def service_rule(self):

        localctx = protobufParser.Service_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_service_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(protobufParser.T__10)
            self.state = 95
            self.match(protobufParser.IDENT)
            self.state = 96
            self.match(protobufParser.T__8)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << protobufParser.T__0) | (1 << protobufParser.T__3) | (1 << protobufParser.T__11))) != 0):
                self.state = 100
                token = self._input.LA(1)
                if token in [protobufParser.T__3]:
                    self.state = 97
                    self.option_rule()

                elif token in [protobufParser.T__11]:
                    self.state = 98
                    self.rpc_rule()

                elif token in [protobufParser.T__0]:
                    self.state = 99
                    self.match(protobufParser.T__0)

                else:
                    raise NoViableAltException(self)

                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(protobufParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rpc_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def dotIdent_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.DotIdent_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.DotIdent_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_rpc_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterRpc_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitRpc_rule(self)




    def rpc_rule(self):

        localctx = protobufParser.Rpc_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rpc_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(protobufParser.T__11)
            self.state = 108
            self.match(protobufParser.IDENT)
            self.state = 109
            self.match(protobufParser.T__12)
            self.state = 110
            self.dotIdent_rule()
            self.state = 111
            self.match(protobufParser.T__13)
            self.state = 112
            self.match(protobufParser.T__14)
            self.state = 113
            self.match(protobufParser.T__12)
            self.state = 114
            self.dotIdent_rule()
            self.state = 115
            self.match(protobufParser.T__13)
            self.state = 116
            self.match(protobufParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageBody_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Field_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Field_ruleContext,i)


        def enum_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Enum_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Enum_ruleContext,i)


        def message_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Message_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Message_ruleContext,i)


        def extend_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Extend_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Extend_ruleContext,i)


        def extensions_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Extensions_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Extensions_ruleContext,i)


        def group_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Group_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Group_ruleContext,i)


        def option_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.Option_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.Option_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_messageBody_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterMessageBody_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitMessageBody_rule(self)




    def messageBody_rule(self):

        localctx = protobufParser.MessageBody_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_messageBody_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(protobufParser.T__8)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << protobufParser.T__3) | (1 << protobufParser.T__5) | (1 << protobufParser.T__6) | (1 << protobufParser.T__7) | (1 << protobufParser.T__15) | (1 << protobufParser.T__20) | (1 << protobufParser.T__23) | (1 << protobufParser.T__24) | (1 << protobufParser.T__25))) != 0):
                self.state = 127
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.field_rule()
                    pass

                elif la_ == 2:
                    self.state = 120
                    self.enum_rule()
                    pass

                elif la_ == 3:
                    self.state = 121
                    self.message_rule()
                    pass

                elif la_ == 4:
                    self.state = 122
                    self.extend_rule()
                    pass

                elif la_ == 5:
                    self.state = 123
                    self.extensions_rule()
                    pass

                elif la_ == 6:
                    self.state = 124
                    self.group_rule()
                    pass

                elif la_ == 7:
                    self.state = 125
                    self.option_rule()
                    pass

                elif la_ == 8:
                    self.state = 126
                    self.match(protobufParser.T__15)
                    pass


                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(protobufParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Group_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifier_rule(self):
            return self.getTypedRuleContext(protobufParser.Modifier_ruleContext,0)


        def CAMEL_IDENT(self):
            return self.getToken(protobufParser.CAMEL_IDENT, 0)

        def INT_LIT(self):
            return self.getToken(protobufParser.INT_LIT, 0)

        def messageBody_rule(self):
            return self.getTypedRuleContext(protobufParser.MessageBody_ruleContext,0)


        def getRuleIndex(self):
            return protobufParser.RULE_group_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterGroup_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitGroup_rule(self)




    def group_rule(self):

        localctx = protobufParser.Group_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_group_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.modifier_rule()
            self.state = 135
            self.match(protobufParser.T__16)
            self.state = 136
            self.match(protobufParser.CAMEL_IDENT)
            self.state = 137
            self.match(protobufParser.T__4)
            self.state = 138
            self.match(protobufParser.INT_LIT)
            self.state = 139
            self.messageBody_rule()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Field_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifier_rule(self):
            return self.getTypedRuleContext(protobufParser.Modifier_ruleContext,0)


        def type_rule(self):
            return self.getTypedRuleContext(protobufParser.Type_ruleContext,0)


        def IDENT(self):
            return self.getToken(protobufParser.IDENT, 0)

        def INT_LIT(self):
            return self.getToken(protobufParser.INT_LIT, 0)

        def optionBody_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(protobufParser.OptionBody_ruleContext)
            else:
                return self.getTypedRuleContext(protobufParser.OptionBody_ruleContext,i)


        def getRuleIndex(self):
            return protobufParser.RULE_field_rule

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.enterField_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, protobufListener ):
                listener.exitField_rule(self)




    def field_rule(self):
